# Kuka-mobile-robot

./: README.md  requirements.txt
kuka_mobile/: CMakeLists.txt  package.xml
kuka_mobile/config/: controllers.yaml  joint_names_kuka_mobile.yaml
kuka_mobile/include/: gazebo_ros_link_attacher.h
kuka_mobile/launch/: alt_file.launch  display.launch  gazebo.launch  kuka_mobile.launch  launch.launch  my_controllers.launch
kuka_mobile/meshes/: base.STL  chassis.STL  end.STL  front.STL  gripp1.STL  gripp2.STL  l1.STL  l2.STL  l3.STL  l4.STL  l5.STL  l6.STL  l7.STL  wheel1.STL  wheel2.STL
kuka_mobile/src/: endeffector_teleop.py  gazebo_ros_link_attacher.cpp  pick.py  reset.py  teleop_template.py
kuka_mobile/urdf/: kuka_mobile.csv  kuka_mobile.urdf
kuka_mobile/world/: launch.world  main.world
kuka_mobile_CAD_models/: Joint1.SLDPRT  Joint2.SLDPRT  Part24.SLDPRT  base.SLDPRT  cart.SLDASM  chasis_base.SLDPRT  front_wheel.SLDPRT  gripper 2.SLDPRT  iiwa 7 R800 - MF Inside elektrisch(2).SLDASM  iiwa 7 R800 - MF Inside elektrisch10.SLDPRT  iiwa 7 R800 - MF Inside elektrisch3.SLDPRT  iiwa 7 R800 - MF Inside elektrisch4.SLDPRT  iiwa 7 R800 - MF Inside elektrisch6.SLDPRT  iiwa 7 R800 - MF Inside elektrisch8.SLDPRT  joint5.SLDPRT  joint6.SLDPRT  kuka.SLDASM  wheel.SLDPRT
kuka_mobile_CAD_models/Gripper/Self/: main.SLDPRT  side part.SLDPRT  ~$side part.SLDPRT
